--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,12 +58,12 @@
     }
   }
   .logo {
-    margin: 6px 0 6px 0;
+    margin: 8px 0 6px 0;
     height: 80px;
     width: auto;
 
     @media #{$medium-up} {
-      margin: 18px 0 8px 0;
+      margin: 22px 0 8px 0;
       height: 150px;
       width: auto;
     }
